--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">RhythmFlow</string>
+
+    <string name="duration_with_hour">%1$02d:%2$02d:%3$02d</string>
+    <string name="duration_without_hour">%1$02d:%2$02d</string>
+    <string name="size">%.2f MB</string>
+    <string name="bitrate">%d kbps</string>
+    <string name="total_time_text">(%s)</string>
 </resources>
